--- a/tarea8.tex
+++ b/tarea8.tex
@@ -38,16 +38,98 @@
         	
         	\begin{enumerate}
         		\item {
-				 $\texttt{and} = \lambda x\lambda y.xy\texttt{true} = 
-				 \lambda x\lambda y.xy (\lambda x\lambda y.x) 
-				 =_{\alpha} \lambda x\lambda y.xy (\lambda a\lambda b.a)$
+				 $\texttt{and} = \lambda x\lambda y.xy\texttt{true}$
         		 
-        		 Como Var($\texttt{and}$) = $\{x$: X, $y$: Y, $a$: A, $b$: B$\}$
-        		 \begin{align}        		 
-        		 &\varnothing | \Gamma \models x : X &\mathrm{(Var)}\\
-        		 &\varnothing | \Gamma \models y : Y &\mathrm{(Var)}\\
-        		 &= 0 &\mathrm{(Definicion \ Integral)}
-        		 \end{align}
+				 Primero
+				 \begin{figure}[H]
+					 \centering
+					 \begin{prooftree}
+
+						 \hypo{x:X \in \Gamma_1 = \{x:X\}}
+						 \infer 1 [Var] {
+							 \varnothing | \Gamma_1 \vdash x:X
+						 }
+
+						 \hypo{y:Y \in \Gamma_2 = \{y:y\}}
+						 \infer 1 [Var] {
+							 \varnothing | \Gamma_2 \vdash y:Y
+						 }
+
+						 \hypo{S = \varnothing}
+
+						 \infer [no rule] 1 {Z_1 \texttt{ fresh}}
+
+						 \infer [no rule] 1 {
+							 (\varnothing \cup \{X\})
+							 \cap
+							 (\varnothing \cup \{Y\})
+							 = \varnothing
+						 }
+
+						 \infer 3 [App] {
+							 R_1 = \{X = Y \mapsto Z_1\} 
+							 | \Gamma_3 = \Gamma_1 \cup \Gamma_2
+							 \vdash x y : Z_1
+						 }
+					 \end{prooftree}
+					 \label{E}
+				 \end{figure}
+
+				 Luego
+				 \begin{figure}[H]
+					 \centering
+					 \begin{prooftree}
+						 \hypo{Anterior}
+						 \infer 1 [App] {
+							 R | \Gamma_3 \vdash x y : Z_1
+						 }
+
+						 \infer 0 [Ax] {
+							 \varnothing | \varnothing
+							 \vdash \texttt{true}:Bool
+						 }
+
+						 \hypo{S = \varnothing}
+
+						 \infer [no rule] 1 {Z_2 \texttt{ fresh}}
+
+						 \infer [no rule] 1 {
+							 (\varnothing \cup \{X, Y\})
+							 \cap
+							 (\varnothing \cup \varnothing)
+							 = \varnothing
+						 }
+
+						 \infer 3 [App] {
+							R_2 = \{Z_1 = Bool \mapsto Z_2\}\cup R
+							| \Gamma_3 \vdash x y \texttt{true} : Z_2
+						 }
+
+						 \infer 1 [Lam] {
+							 R_2
+							 | \Gamma_4 = \Gamma_3 \backslash \{y : Y\} 
+							 \vdash \lambda y . x y \texttt{true} : Y \mapsto Z_2
+						 }
+
+						 \infer 1 [Lam] {
+							 R_2
+							 | \varnothing = \Gamma_4 \backslash \{x : X\} 
+							 \vdash \lambda x. \lambda y . 
+							 x y \texttt{true} : X \mapsto (Y \mapsto Z_2)
+						 }
+					 \end{prooftree}
+					 \label{D}
+				 \end{figure}
+
+				 Con $R_2 = \{X = Y \mapsto Z_1, Z_1 = Bool \mapsto Z_2\}$, que
+				 unificado es $\{X = Y \mapsto (Bool \mapsto Z_2)\}$
+
+				 Por lo que la expresión tiene tipo
+
+				 \[
+					 \lambda x. \lambda y . 
+					 x y \texttt{true} : (Y \mapsto (Bool \mapsto Z_2)) \mapsto (Y \mapsto Z_2)
+				 \]
         		}
         		\item {
 					$\texttt{or} = \lambda x \lambda y.x \texttt{true} y$
@@ -151,19 +233,56 @@
 						\mapsto (Y \mapsto Z_2)
 					\]
 
-
-					
-
         		}
         		\item {
-        			$\texttt{snd} = \lambda p.p  \texttt{false} 
-        			 = \lambda p.p (\lambda x\lambda y.y) $
-        			Como Var($\texttt{and}$) = $\{x$: X, $y$: Y, $p$: P$\}$
-        			\begin{align}       		 
-        			&\varnothing | \{x: X, y: Y\} \models x : X &\mathrm{(Var)}\\
-        			&\varnothing | \{x: X, y: Y\} \models x : X &\mathrm{(Var)}\\
-        			&= 0 &\mathrm{(Definicion \ Integral)}
-        			\end{align}
+					$\texttt{snd} = \lambda p.p  \texttt{false}$
+					
+					\begin{figure}[H]
+						\centering
+						\begin{prooftree}
+							\hypo{
+								p:P \in \Gamma = \{p:P\}
+							}
+							\infer 1 [Var] {
+								\varnothing | \Gamma \vdash p : P
+							}
+
+							\infer 0 [Ax] {
+								\varnothing | \varnothing 
+								\vdash \texttt{false} : Bool
+							}
+
+							\hypo{S = \varnothing}
+
+							\infer [no rule] 1 {Z \texttt{ fresh}}
+
+							\infer [no rule] 1 {
+								(\varnothing \cup \{P\})
+								\cap
+								(\varnothing \cup \varnothing)
+								= \varnothing
+							}
+
+							\infer 3 [App] {
+								R = \{P = Bool \mapsto Z\} | \Gamma 
+								\vdash p \texttt{false} : Z
+							}
+
+							\infer 1 [Lam] {
+								R | \varnothing = \Gamma \backslash \{p:P\}
+								\vdash \lambda p . p \texttt{false} : P \mapsto Z
+							}
+						\end{prooftree}
+						\label{C}
+					\end{figure}
+
+					Y como $R = \{P = Bool \mapsto Z\}$ ya está unificado, 
+					entonces el tipo de la expresión es
+
+					\[
+						\lambda p. p \texttt{false} : (Bool \mapsto Z) \mapsto Z
+					\]
+
 				}
 			\end{enumerate}
         }
